--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,47 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
+
+# Houdini Project Files
+*.hip filter=lfs diff=lfs merge=lfs -text
+*.hipnc filter=lfs diff=lfs merge=lfs -text
+*.hda filter=lfs diff=lfs merge=lfs -text
+*.hdanc filter=lfs diff=lfs merge=lfs -text
+*.otl filter=lfs diff=lfs merge=lfs -text
+*.pic filter=lfs diff=lfs merge=lfs -text
+
+# Geometry and Object Files
+*.bgeo filter=lfs diff=lfs merge=lfs -text
+*.FBX filter=lfs diff=lfs merge=lfs -text
+*.DAE filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
+*.usd filter=lfs diff=lfs merge=lfs -text
+*.usdc filter=lfs diff=lfs merge=lfs -text
+*.usda filter=lfs diff=lfs merge=lfs -text
+
+# Images
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.tiff filter=lfs diff=lfs merge=lfs -text
+*.exr filter=lfs diff=lfs merge=lfs -text
+
+# Archives
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
+
+# VDB Volumetric Files
+*.vdb filter=lfs diff=lfs merge=lfs -text
+
+# Alembic Cache Files
+*.abc filter=lfs diff=lfs merge=lfs -text
+
+# Simulation Files
+*.sim filter=lfs diff=lfs merge=lfs -text
+
+# Particle Files
+*.prt filter=lfs diff=lfs merge=lfs -text
+
+# FLIP Fluids and other cached data
+*.bgeo.sc filter=lfs diff=lfs merge=lfs -text
+
+# Compiled binaries
+*.so* filter=lfs diff=lfs merge=lfs -text
